--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,5 +1,3 @@
-/* OD DIREKTOROT  :D :D :D :D :D */
-/* misterLeft - imeto mu e od leva strana */
 .mister {
 	
 	margin-bottom: 10px;
@@ -11,7 +9,7 @@
 	border-radius:50%; 
 	padding-top:30px; 
 	text-align:center; 
-	font-size:4.5em;	
+	font-size:4.5em;
 }
 
 .misterLeft .misterData {
@@ -32,4 +30,11 @@
 	text-align: right;
 	
 	
+}
+
+
+.podsodrzinaAboutUs {
+  height: 400px;
+  overflow-x:hidden;
+  overflow-y:scroll;
 }
